--- a/css/landing.css
+++ b/css/landing.css
@@ -32,16 +32,20 @@ margin:20px 0;
 .timeline-landing {
 position:relative;
 height:554px;
-background:url(/theme/img/landing/bg_timeline_landing.jpg) center -70px fixed;/*-webkit-box-shadow: 0px 8px 25px -9px #000;
+background:url(../images/slider-medical.jpg) center -70px fixed;/*-webkit-box-shadow: 0px 8px 25px -9px #000;
 -moz-box-shadow: 0px 8px 25px -9px #000;
 box-shadow:0px 8px 25px -9px #000; */
+
+max-width:1920px;
+min-width:960px;
+margin:0px auto;
 }
 .timeline-landing .diagonal-layer-up {
 /*position:absolute;
 top:0;*/
 width:100%;
 height:145px;
-background:url(/theme/img/landing/sprite_vwplus_landing.png) center -72px no-repeat;
+background:url(../images/sprite_vwplus_landing.png) center -72px no-repeat;
 z-index:5;
 }
 .timeline-landing .row {
@@ -118,20 +122,20 @@ position:absolute;
 bottom:0;
 width:100%;
 height:60px;
-background:url(/theme/img/landing/sprite_vwplus_landing.png) center -230px repeat-x;
+background:url(../images/sprite_vwplus_landing.png) center -230px repeat-x;
 }
 /* Community section at the landing page
 ---------------------------------------------------------------------------------------------------- */
 .community-landing {
 position:relative;
-background:url(/theme/img/landing/bg_community_landing.jpg) center top no-repeat;
+background:url(../images/bg_community_landing.jpg) center top no-repeat;
 height:500px;
 }
 .community-landing .bubble {
 position:absolute;
-top:0px;
+top:-20px;
 height:276px;
-background:url(/theme/img/landing/community_speach_bubble.png) center top no-repeat;
+background:url(../images/community_speach_bubble.png) center top no-repeat;
 }
 .community-landing .bubble h1 {
 padding:70px 39px 39px;
