--- a/css/master.css
+++ b/css/master.css
@@ -83,6 +83,12 @@ display: inline;
 overflow: hidden;
 margin: 0 10px;
 }
+
+.column.login{
+	float:right;
+	width:530px;
+	
+}
 .row {
 overflow: hidden;
 width: 960px;
@@ -91,6 +97,12 @@ margin: 0 auto;
 .row .row {
 margin: 0 -10px;
 }
+.row.menu1 {
+overflow: hidden;
+width: 100% !important;
+margin: 0 auto;
+}
+
 /* Wrappers
 ---------------------------------------------------------------------------------------------------- */
 #wrapper {
